# Update_Client

./: readme.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/aib/update/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: bsdiff.c  bspatch.c  main.c
app/src/main/cpp/bzip2/: bzlib.c
app/src/main/cpp/include/: update.h
app/src/main/java/com/aib/update/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/aib/update/: ExampleUnitTest.java
